source/css/style.css
/*  Navbar Adjustments
============================================= */

/* Top Padding for responsive navbar-top-fixed */

body {
    padding-top: 60px;
    padding-bottom: 40px;
}

body#lost {
  background: url(../../images/TRAP-404.png) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

@media(max-width:979px) {
    body {
        padding-top: 0;
    }
}

/* For static full-width navbar
(If needed) */

/*
.navbar-inner {
-webkit-border-radius: 0;
-moz-border-radius: 0;
border-radius: 0;
}
*/

/* padding for in-page bookmarks and fixed navbar */

section {
    /*padding-top: 30px;*/
}

/*Add padding to top of anchors so they aren't obstructed by fixed navbar*/
a[name] {
  padding-top: 40px;
  margin-top: -40px;

  /*required for webkit browsers*/
  display: inline-block;

  visibility: hidden;

}

/*Workaround for 'Fixed element disappears in Chrome'*/
/*http://stackoverflow.com/a/14569741/996114*/
html.has-anchors, body.has-anchors {
  height: 100%;
  overflow: scroll;
}

section.people-main {
    padding-top: 30px;
}

article.aim section.aim-main h1,
article.protocol section.protocol-main h1,
article.software section.software-main h1,
article.people section.people-main h1 {
    font-size: 150%;
    line-height: 1.2;
}

article.people section.people-main h1 small {
  font-size: inherit;
}

article.aim section.aim-main h2,
article.protocol section.protocol-main h2,
article.software section.software-main h2,
article.people section.people-main h2 {
  font-weight: normal;
  padding: 0;
  font-size: 130%;
  line-height: 1.2;
}

article.aim section.aim-main,
article.protocol section.protocol-main,
article.software section.software-main/*,
article.people section.people-main*/ {
    padding: 20px;
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    background: #eeeeee;
}

/*article.aim section.aim-main,
article.protocol section.protocol-main,
article.software section.software-main,*/
article.people section.people-main {
    /*padding: 20px;*/
    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    background: #eeeeee;
}

/*article.aim section.aim-main section,
article.protocol section.protocol-main section,
article.software section.software-main section,*/
article.people section.people-main section {
    padding: 0 30px 10px 10px;
/*    -webkit-border-radius: 6px;
    -moz-border-radius: 6px;
    border-radius: 6px;
    background: #eeeeee;*/
}

img {
    margin: 5px 0 5px 10px;
}

/*.hero-unit > img { max-width: 40%;}*/
/*section.aim-main > img { max-width: 25%;}*/


hr {
    border: 0;
    border-top: 1px solid gray;
}

.navbar-inverse .nav-collapse .nav > li.active > a,
.navbar-inverse .nav-collapse .nav > li.active > a:hover,
.navbar-inverse .nav-collapse .dropdown-menu .active a,
.navbar-inverse .nav-collapse .dropdown-menu .active a:hover {
    background-color: #111111;
    color: white;
}

.navbar-inverse .nav-collapse .nav > li > a:hover,
.navbar-inverse .nav-collapse .dropdown-menu a:hover {
    background-color: #999999;
    color: white;
}

section.abstract {
  padding-top: 0;
}

p#species {
  margin-bottom: 0;
}

.nav-pills {
  margin-bottom: 5px;
}

nav + hr {
  padding-top: 0;
  margin-top: 0;
}

h1.person, h2.person {
  text-align: center;
  margin: 0;
}

h1.person-left, h2.person-left {
  /*text-align: center;*/
  margin: 0;
}

h2.person:last-child, h2.person-left:last-child {
  margin: 0 0 20px 0;
}

/* section.person-description {
  padding: 0 20px 0 0;
} */
img.person {
    display: block;
    margin-left: auto;
    margin-right: auto }

article + article {
  padding: 20px 0 0 0;
}

article.people + article.people {
  padding: 0;
}

p > .btn {
  margin-left: 15px;
}

